/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.custos.agent.profile.service;

option go_package = "./pb";

message Agent {
    string id = 1;
    AgentStatus status = 2;
    int64 created_at = 3;
    int64 last_modified_at = 4;
    repeated string roles = 5;
    repeated AgentAttribute attributes = 6;
    repeated string agent_client_roles = 8;

}

enum AgentStatus {
    ENABLED = 0;
    DISABLED = 1;
}

message AgentAttribute {
    string id = 1;
    string key = 2;
    repeated string value = 3;
}

message AgentRequest {
    int64 tenant_id = 1;
    Agent agent = 2;
}

message OperationStatus {
    bool status = 1;
}

service AgentProfileService {

    rpc createAgent (AgentRequest) returns (Agent);
    rpc updateAgent (AgentRequest) returns (Agent);
    rpc deleteAgent (AgentRequest) returns (OperationStatus);
    rpc getAgent (AgentRequest) returns (Agent);

}